--- a/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,16 @@
         android:name="com.petpal.swimmer_seller.ui.user.SignUpFragment"
         android:label="SignUpFragment" >
         <action
-            android:id="@+id/action_signUpFragment_to_mainFragment"
+            android:id="@+id/action_signUpFragment_to_signUpInfoFragment"
+            app:destination="@id/signUpInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpInfoFragment"
+        android:name="com.petpal.swimmer_seller.ui.user.SignUpInfoFragment"
+        android:label="fragment_sign_up_info"
+        tools:layout="@layout/fragment_sign_up_info" >
+        <action
+            android:id="@+id/action_signUpInfoFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
     </fragment>
 </navigation>
