feat: [판매자용] 회원가입 회원정보 입력 기능구현, 비밀번호 유효성 검사 수정
### 비밀번호 유효성 검사 수정
- 6자 이상되도록 수정

### 회원정보 입력 기능 구현
- firebase realtimedatabase
- SignUpInfoFragment

--- a/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
@@ -38,5 +38,15 @@
         <action
             android:id="@+id/action_signUpInfoFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
+
+        <argument
+            android:name="email"
+            app:argType="string"
+            android:defaultValue="test@test.com"/>
+
+        <argument
+            android:name="password"
+            app:argType="string"
+            android:defaultValue="11111"/>
     </fragment>
 </navigation>
