--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -2,9 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_nav_graph"
-    app:startDestination="@id/item_home">
-
+    android:id="@+id/fragment_nav_graph">
     <fragment
         android:id="@+id/item_category"
         android:name="com.petpal.swimmer_customer.CategoryFragment"
