--- a/Swimmer_customer/app/src/main/res/navigation/nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/LoginFragment">
 
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.petpal.swimmer_customer.main.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        android:id="@+id/LoginFragment"
+        android:name="com.petpal.swimmer_customer.LoginFragment"
+        android:label="Login_fragment"
+        tools:layout="@layout/fragment_login">
+
+        <action
+            android:id="@+id/action_LoginFragment_to_registerFragment"
+            app:destination="@id/RegisterFragment" />
+        <action
+
+            android:id="@+id/action_loginFragment_to_findInfoFragment"
+            app:destination="@id/FindInfoFragment">
+
+        </action>
+
+    </fragment>
+    <fragment
+        android:id="@+id/RegisterFragment"
+        android:name="com.petpal.swimmer_customer.RegisterFragment"
+        android:label="register_fragment"
+        tools:layout="@layout/fragment_register">
+    </fragment>
+
+    <fragment
+        android:id="@+id/FindInfoFragment"
+        android:name="com.petpal.swimmer_customer.FindInfoFragment"
+        android:label="findInfo_fragment"
+        tools:layout="@layout/fragment_find_info" />
+
+
 </navigation>
