--- a/Swimmer_customer/app/src/main/res/values/colors.xml
+++ b/Swimmer_customer/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#4953BB</color>
+    <color name="colorSecondary">#4F56A9</color>
+    <color name="colorTertiary">#934B00</color>
+    <color name="colorNeutral">#FFFBFF</color>
 </resources>
