feat: [판매자용] 비밀번호 찾기 기능구현중
- 이메일 입력해서 그 쪽으로 재설정 이메일 보내도록
- TODO: 키보드 내리기, 단말기 언어설정대로 보내지는지 확인하기

--- a/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_loginFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_resetPasswordFragment"
+            app:destination="@id/resetPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainFragment"
@@ -49,4 +52,9 @@
             app:argType="string"
             android:defaultValue="11111"/>
     </fragment>
+    <fragment
+        android:id="@+id/resetPasswordFragment"
+        android:name="com.petpal.swimmer_seller.ui.user.ResetPasswordFragment"
+        android:label="fragment_reset_password"
+        tools:layout="@layout/fragment_reset_password" />
 </navigation>
