--- a/Swimmer_customer/app/src/main/res/layout/fragment_find_info.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_find_info.xml
@@ -4,14 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
-    <TextView
-        android:id="@+id/statusHeader"
+
+    <!-- 아이디 찾기 섹션 -->
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbarFindInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:paddingBottom="16dp"
-        android:gravity="center"/>
-    <!-- 아이디 찾기 섹션 -->
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Toolbar_Swimmer_Customer" />
+
     <LinearLayout
         android:id="@+id/idFindLayout"
         android:layout_width="match_parent"
@@ -20,28 +22,48 @@
         android:visibility="gone">
 
         <EditText
-            android:id="@+id/editTextText3"
+            android:id="@+id/editTextFinIdNickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="닉네임을 입력해주세요" />
 
         <EditText
-            android:id="@+id/editTextText4"
+            android:id="@+id/editTextFindIdPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="전화번호를 입력해주세요" />
 
+        <TextView
+            android:id="@+id/textViewFoundId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
         <Button
             android:id="@+id/ButtonFindId"
+            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="아이디 찾기" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="아이디 찾기"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#FFFFFF" />
+        <Button
+            android:id="@+id/ButtonFindInfoToLogin"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="로그인하러 가기"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#FFFFFF" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp" />
     </LinearLayout>
 
     <!-- 비밀번호 재설정 섹션 -->
@@ -53,13 +75,13 @@
         android:id="@+id/passwordResetLayout">
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/editTextFindPwEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="이메일을 입력하세요"/>
 
         <EditText
-            android:id="@+id/editTextText4_2"
+            android:id="@+id/editTextFindPwPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="전화번호를 입력하세요"/>
@@ -70,11 +92,6 @@
             android:layout_height="wrap_content"
             android:text="비밀번호 재설정"/>
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"/>
     </LinearLayout>
 
 </LinearLayout>
