--- a/Swimmer_customer/app/src/main/res/layout/fragment_login.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginFragment" >
+    tools:context=".ui.login.LoginFragment" >
 
     <TextView
         android:id="@+id/textView"
@@ -62,13 +62,21 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <CheckBox
+        android:id="@+id/checkboxAutoLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:text="자동로그인" />
     <Button
         android:id="@+id/ButtonLogin"
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="0dp"
         android:layout_marginRight="20dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="로그인"
