--- a/Swimmer_customer/app/src/main/res/navigation/nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/nav_graph.xml
@@ -4,36 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
     app:startDestination="@id/LoginFragment">
+    <fragment
+        android:id="@+id/MainFragment"
+        android:name="com.petpal.swimmer_customer.ui.main.MainFragment"
+        android:label="main_Fragment"
+        tools:layout="@layout/fragment_main">
 
+        <action
+            android:id="@+id/action_mainFragment_to_loginFragment"
+            app:destination="@id/LoginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/LoginFragment"
-        android:name="com.petpal.swimmer_customer.LoginFragment"
-        android:label="Login_fragment"
+        android:name="com.petpal.swimmer_customer.ui.login.LoginFragment"
+        android:label="login_fragment"
         tools:layout="@layout/fragment_login">
 
         <action
-            android:id="@+id/action_LoginFragment_to_registerFragment"
+            android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/RegisterFragment" />
         <action
-
             android:id="@+id/action_loginFragment_to_findInfoFragment"
             app:destination="@id/FindInfoFragment">
-
+        </action>
+        <action
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/MainFragment">
         </action>
 
     </fragment>
+
+
+
     <fragment
         android:id="@+id/RegisterFragment"
-        android:name="com.petpal.swimmer_customer.RegisterFragment"
+        android:name="com.petpal.swimmer_customer.ui.register.RegisterFragment"
         android:label="register_fragment"
         tools:layout="@layout/fragment_register">
     </fragment>
 
     <fragment
         android:id="@+id/FindInfoFragment"
-        android:name="com.petpal.swimmer_customer.FindInfoFragment"
+        android:name="com.petpal.swimmer_customer.ui.findinfo.FindInfoFragment"
         android:label="findInfo_fragment"
-        tools:layout="@layout/fragment_find_info" />
+        tools:layout="@layout/fragment_find_info">
+        <action
+            android:id="@+id/action_findInfoFragment_to_LoginFragment"
+            app:destination="@id/LoginFragment"/>
+
+    </fragment>
 
 
 </navigation>
