refactor : [판매자용] Product 클래스 구조 변경, 난수 key를 uid로 사용

--- a/Swimmer_seller/app/src/main/res/layout/fragment_home.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_home.xml
@@ -8,13 +8,14 @@
     tools:context=".ui.home.HomeFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/materialToolbar"
+        android:id="@+id/toolbar_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:title="SWIMMER" />
+        app:title="SWIMMER Seller"
+        app:titleTextColor="@color/white" />
 
     <LinearLayout
         android:layout_width="match_parent"
