--- a/Swimmer_seller/app/src/main/res/values/themes.xml
+++ b/Swimmer_seller/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.Swimmer_seller" parent="Base.Theme.Swimmer_seller" />
+
+    <style name="HsbombaramTextAppearance">
+        <item name="android:fontFamily">@font/hsbombaram</item>
+    </style>
 </resources>
