fix : 디렉토리 구조 변경 + 상세페이지 CollapsingToolbarLayout로 변경

--- a/Swimmer_customer/app/src/main/res/layout/fragment_home.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layoutDescription="@xml/fragment_home_scene"
-    tools:context=".HomeFragment">
+    tools:context=".ui.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
