--- a/Swimmer_customer/app/src/main/res/layout/fragment_order_complete.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_order_complete.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
-    tools:context=".ui.order.OrderCompleteFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/orderCompleteToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="?attr/actionBarTheme"
-        android:background="@color/white"
-        android:minHeight="?attr/actionBarSize" />
+    <data>
 
-    <TextView
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="match_parent"
-        android:textSize="100sp"
-        android:text="주문완료" />
+        tools:context=".ui.order.OrderCompleteFragment">
 
-</LinearLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/orderCompleteToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="?attr/actionBarTheme"
+            android:background="@color/white"
+            android:minHeight="?attr/actionBarSize" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="100sp"
+            android:text="주문완료" />
+
+    </LinearLayout>
+</layout>
