--- a/Swimmer_customer/app/src/main/res/layout/ranking_item.xml
+++ b/Swimmer_customer/app/src/main/res/layout/ranking_item.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="7dp"
-    app:cardCornerRadius="10dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <data>
 
-        <ImageView
-            android:id="@+id/rankingImageView"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
-            android:adjustViewBounds="true"
-            android:layout_gravity="center"
-            android:background="@color/white"
-            android:scaleType="fitXY" />
+    </data>
 
-        <TextView
-            android:id="@+id/rankingTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:text="예제1" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="10dp">
 
-        <TextView
-            android:id="@+id/rankingDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="예제2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/rankingImageView"
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:id="@+id/rankingTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:text="예제1" />
+
+            <TextView
+                android:id="@+id/rankingDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="예제2" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
