--- a/Swimmer_customer/app/src/main/res/values/colors.xml
+++ b/Swimmer_customer/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#90EE90</color>
     <color name="colorPrimary">#4953BB</color>
     <color name="colorSecondary">#4F56A9</color>
     <color name="colorTertiary">#934B00</color>
