--- a/Swimmer_customer/app/src/main/res/layout/fragment_login.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_login.xml
@@ -64,7 +64,7 @@
 
     <CheckBox
         android:id="@+id/checkboxAutoLogin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
