feat: [판매자용] 이메일 찾기 기능 구현
- 사용자로부터 전화번호를 입력받고 db에서 전화번호 검색하여 email 도출

--- a/Swimmer_seller/app/src/main/res/layout/fragment_login.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_login.xml
@@ -69,7 +69,7 @@
             android:background="?android:attr/listDivider" />
 
         <Button
-            android:id="@+id/buttonFindEmail"
+            android:id="@+id/buttonGoToFindEmail"
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
