--- a/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,9 @@
         <action
             android:id="@+id/action_loginFragment_to_resetPasswordFragment"
             app:destination="@id/resetPasswordFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_findEmailFragment"
+            app:destination="@id/findEmailFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainFragment"
@@ -57,4 +60,9 @@
         android:name="com.petpal.swimmer_seller.ui.user.ResetPasswordFragment"
         android:label="fragment_reset_password"
         tools:layout="@layout/fragment_reset_password" />
+    <fragment
+        android:id="@+id/findEmailFragment"
+        android:name="com.petpal.swimmer_seller.ui.user.FindEmailFragment"
+        android:label="fragment_find_email"
+        tools:layout="@layout/fragment_find_email" />
 </navigation>
