button에 띄워줄 결제 금액 메서드 구현 * 기존 item을 가져오는 메서드와 결합 CompleteFragment에서 돌아오는 시간 3초로 수정

--- a/Swimmer_customer/app/src/main/res/layout/fragment_complete.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_complete.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/HomeToolbarTheme"
     tools:context=".CompleteFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbarComplete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/md_theme_light_background"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +53,7 @@
 
     <Button
         android:id="@+id/completeHome"
-        style="@style/Widget.Material3.Button"
+        style="@style/Base.Theme.Swimmer_customer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
